# rusty_emu

./: CONSOLE_README.md  Cargo.toml  README.md
configs/: console_config.xml  mcs4_basic.json  mcs4_io_demo.json  mcs4_max.json
programs/: README.md
src/: README.md  bus.rs  component.rs  connection.rs  console.rs  lib.rs  main.rs  pin.rs  system_config.rs  types.rs
src/components/: README.md  mod.rs
src/components/clock/: generic_clock.rs  mod.rs  two_phase_clock.rs
src/components/common/: README.md  intel_400x.rs  mod.rs
src/components/cpu/: cmos_65c02.rs  cpu_traits.rs  intel_4004.rs  mod.rs  mos_6502.rs  wdc_65c02.rs
src/components/memory/: generic_ram.rs  generic_rom.rs  intel_4001.rs  intel_4002.rs  intel_4003.rs  mod.rs
src/gui/: components.rs  mod.rs  state.rs
src/systems/: README.md  intel_mcs_4.rs  intel_mcs_4_max.rs  mod.rs
tests/: README.md  demo.rs  gui_integration_tests.rs  gui_tests.rs  integration_tests.rs  intel_400x_tests.rs  json_integration_tests.rs  lib.rs  mock_based_tests.rs  mocks.rs  property_based_tests.rs  simple_test.rs  working_test.rs
