[package]
name = "rusty_emu"
version = "0.1.0"
edition = "2021"
description = "A comprehensive Intel MCS-4 microprocessor simulator with JSON-configurable architecture"
documentation = "https://docs.rs/rusty_emu"
readme = "README.md"
keywords = ["emulator", "intel", "mcs4", "4004", "microprocessor"]
categories = ["emulation", "hardware-support", "simulation"]

[dependencies]
tempfile = "3.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
ratatui = "0.24"

[dev-dependencies]
