[package]
name = "rusty_emu"
version = "0.1.0"
edition = "2021"
description = "A comprehensive Intel MCS-4 microprocessor simulator with JSON-configurable architecture"
documentation = "https://docs.rs/rusty_emu"
readme = "README.md"
keywords = ["emulator", "intel", "mcs4", "4004", "microprocessor"]
categories = ["emulation", "hardware-support", "simulation"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
ratatui = "0.24"
egui = "0.24"
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow", "persistence"] }
rfd = "0.14"
raw-window-handle = "0.5"

# Force compatible versions for Rust 1.81.0
[dependencies.tokio]
version = "1.0"
features = ["rt", "macros"]

[dev-dependencies]
tokio-test = "0.4"

# Platform-specific dependencies for GUI support
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi", "dwmapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa-foundation = "0.1"
